--- a/.htaccess
+++ b/.htaccess
@@ -10,6 +10,6 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ zyro/$1 [L,QSA]
 
 
-RewriteEngine On
-RewriteCond %{HTTPS} !=on
-RewriteRule ^(.*)$ https://www.agrotargiwschod.pl/$1 [R=301,L]
+#RewriteEngine On
+#RewriteCond %{HTTPS} !=on
+#RewriteRule ^(.*)$ https://www.agrotargiwschod.pl/$1 [R=301,L]
